--- a/src/app/styles/header.css
+++ b/src/app/styles/header.css
@@ -37,8 +37,12 @@ header ul {
 }
 
 
-@media screen and (max-width: 450px){
+@media screen and (max-width: 550px){
     header ul {
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
         font-size: 1rem;
+        gap: 1.5rem;
     }
 }
