--- a/src/app/styles/header.css
+++ b/src/app/styles/header.css
@@ -43,6 +43,7 @@ header ul {
         justify-content: center;
         align-items: center;
         font-size: 1rem;
+        height: fit-content;
         gap: 1.5rem;
     }
 }
