fixing navbar background

--- a/src/app/styles/header.css
+++ b/src/app/styles/header.css
@@ -38,6 +38,9 @@ header ul {
 
 
 @media screen and (max-width: 550px){
+    header {
+        height: fit-content;
+    }
     header ul {
         flex-direction: column;
         justify-content: center;
